
cmake_minimum_required (VERSION 3.21)

if(MPI_FOUND)
add_subdirectory(mpi_tests)
endif()
add_subdirectory(memory_checks)
add_subdirectory(executable_example)
add_subdirectory(executable_order_picking)
add_subdirectory(parametric_policy_opt)
add_subdirectory(dcl_example)
add_subdirectory(lostsales_paper_results)
add_subdirectory(lostsales_exact)
add_subdirectory(binpacking_evaluate)
add_subdirectory(perishables_paper_results)
add_subdirectory(resource_allocation)
add_subdirectory(collaborative_picking)
add_subdirectory(queue_example)
add_subdirectory(queue_dcl)
add_subdirectory(queue_rvi)
add_subdirectory(queue_analysis1)
add_subdirectory(queue_analysis2)
add_subdirectory(queue_rvi_validate)
add_subdirectory(queue_trace)
add_subdirectory(queue_prequel)
add_subdirectory(queue_depth_study)
add_subdirectory(queue_cont_sim)
add_subdirectory(mm1_baseline)
add_subdirectory(mm1_sensitivity)
add_subdirectory(stochastic_fifo_test)
add_subdirectory(action_label_test)
add_subdirectory(queue_dcl_probe)
add_subdirectory(ppo_test)
add_subdirectory(ppo_validate)
add_subdirectory(queue_matrix)
add_subdirectory(queue_dsweep)